[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/platform_metroidvania asset pack v1.01/miscellaneous sprites/buttom.png" type="Texture" id=1]
[ext_resource path="res://Assets/platform_metroidvania asset pack v1.01/miscellaneous sprites/buttom_pressed.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Botao.gd" type="Script" id=3]
[ext_resource path="res://Assets/Sounds/tick_001.ogg" type="AudioStream" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Pressed",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Released",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8.72571, 2.49049 )

[node name="Botao" type="Area2D"]
collision_layer = 0
collision_mask = 128
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Released"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -0.132431 )
shape = SubResource( 2 )

[node name="SoundBotao" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[connection signal="body_entered" from="." to="." method="_on_Botao_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Botao_body_exited"]
